--- a/site/feed.html
+++ b/site/feed.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.jpg" alt="Логотип">
+            <img src="../public/static/logo.jpg" alt="Логотип">
         </div>
         <div class="description">
             <p>Лента публикаций - LifeCourse</p>
@@ -56,7 +56,7 @@
         <div class="publication">
             <div class="publication-header">
                 <div class="user-info">
-                    <img src="profile1.jpg" alt="Фото пользователя" class="publication-user-photo">
+                    <img src="../public/static/profile1.jpg" alt="Фото пользователя" class="publication-user-photo">
                     <span class="publication-user">Иванова Анна</span>
                 </div>
                 <span class="publication-date">10 апреля 2024, 15:30</span>
@@ -71,7 +71,7 @@
         <div class="publication">
             <div class="publication-header">
                 <div class="user-info">
-                    <img src="profile2.jpg" alt="Фото пользователя" class="publication-user-photo">
+                    <img src="../public/static/profile2.jpg" alt="Фото пользователя" class="publication-user-photo">
                     <span class="publication-user">Петров Иван</span>
                 </div>
                 <span class="publication-date">11 апреля 2024, 10:45</span>
@@ -116,7 +116,7 @@
         <div class="publication">
             <div class="publication-header">
                 <div class="user-info">
-                    <img src="profile5.jpg" alt="Фото пользователя" class="publication-user-photo">
+                    <img src="../public/static/profile5.jpg" alt="Фото пользователя" class="publication-user-photo">
                     <span class="publication-user">Новиков Алексей</span>
                 </div>
                 <span class="publication-date">14 апреля 2024, 11:10</span>
