--- a/site/login.html
+++ b/site/login.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.jpg" alt="Логотип">
+            <img src="../public/static/logo.jpg" alt="Логотип">
         </div>
         <div class="description">
             <p>Авторизация - LifeCourse</p>
