--- a/site/main.html
+++ b/site/main.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.jpg" alt="Логотип">
+            <img src="../public/static/logo.jpg" alt="Логотип">
         </div>
         <div class="description">
             <p>LifeCourse - ваш надежный гид в мире образования!</p>
@@ -58,7 +58,7 @@
     <div class="top-students">
         <h2>Топ студентов</h2>
         <div class="student">
-            <img src="profile1.jpg" alt="Фото профиля">
+            <img src="../public/static/profile1.jpg" alt="Фото профиля">
             <div class="student-info">
                 <p>Фамилия: Иванов</p>
                 <p>Имя: Иван</p>
