--- a/site/rating.html
+++ b/site/rating.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.jpg" alt="Логотип">
+            <img src="../public/static/logo.jpg" alt="Логотип">
         </div>
         <div class="description">
             <p>Рейтинг студентов - LifeCourse</p>
@@ -76,7 +76,7 @@
         <div class="student-ranking">
             <div class="student-info">
                 <span class="ranking-number">1.</span>
-                <img src="profile1.jpg" alt="Фото профиля">
+                <img src="../public/static/profile1.jpg" alt="Фото профиля">
                 <p class="student-name"><a href="#">Иванов Иван</a></p>
                 <p class="faculty"><a href="#">Физика</a></p>
                 <p class="group"><a href="#">Группа</a></p>
