--- a/site/user_profile.html
+++ b/site/user_profile.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.jpg" alt="Логотип">
+            <img src="../public/static/logo.jpg" alt="Логотип">
         </div>
         <nav class="main-menu">
             <ul>
