--- a/site/feed.html
+++ b/site/feed.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../public/static/logo.jpg" alt="Логотип">
+            <img src="../public/static/logo-new.png" alt="Логотип">
         </div>
         <div class="description">
             <p>Лента публикаций - LifeCourse</p>
