--- a/site/main.html
+++ b/site/main.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../public/static/logo.jpg" alt="Логотип">
+            <img src="../public/static/logo-new.png" alt="Логотип">
         </div>
         <div class="description">
             <p>LifeCourse - ваш надежный гид в мире образования!</p>
