--- a/site/rating.html
+++ b/site/rating.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../public/static/logo.jpg" alt="Логотип">
+            <img src="../public/static/logo-new.png" alt="Логотип">
         </div>
         <div class="description">
             <p>Рейтинг студентов - LifeCourse</p>
