--- a/site/login_registration.html
+++ b/site/login_registration.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация - LifeCourse</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../public/styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="../public/static/logo-new.png" alt="Логотип">
+            <img src="logo.jpg" alt="Логотип">
         </div>
         <div class="description">
             <p>Регистрация - LifeCourse</p>
