--- a/site/user_profile.html
+++ b/site/user_profile.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Профиль студента</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../public/styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="../public/static/logo-new.png" alt="Логотип">
+            <img src="logo.jpg" alt="Логотип">
         </div>
+        <nav class="main-menu">
+            <ul>
+                <li><a href="main.html">Главная страница</a></li>
+                <li><a href="feed.html">Лента</a></li>
+                <li><a href="rating.html">Рейтинг</a></li>
+                <li><a href="user_profile.html">Профиль студента</a></li>
+                <li><a href="profile_university.html">Профиль вуза</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <nav class="main-menu">
-        <ul>
-            <li><a href="main.html">Главная страница</a></li>
-            <li><a href="feed.html">Лента</a></li>
-            <li><a href="rating.html">Рейтинг</a></li>
-            <li><a href="user_profile.html">Профиль студента</a></li>
-            <li><a href="profile_university.html">Профиль вуза</a></li>
-        </ul>
-    </nav>
 
     <div class="student-profile">
         <h2>Профиль студента</h2>
