--- a/site/add_publication.html
+++ b/site/add_publication.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Авторизация - LifeCourse</title>
+    <title>Добавить публикацию</title>
     <link rel="stylesheet" href="../public/styles.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
             <img src="logo.jpg" alt="Логотип">
         </div>
         <div class="description">
-            <p>Авторизация - LifeCourse</p>
+            <p>Добавление публикации - LifeCourse</p>
         </div>
     </header>
 
@@ -26,18 +28,25 @@
         </ul>
     </nav>
 
-    <div class="login-form">
-        <h2>Авторизация</h2>
-        <form action="#" method="post">
-            <label for="login">Логин:</label><br>
-            <input type="text" id="login" name="login" required><br><br>
-            
-            <label for="password">Пароль:</label><br>
-            <input type="password" id="password" name="password" required><br><br>
-            
-            <input type="submit" value="Войти">
+    <div class="publication-form">
+        <h2>Добавить новую публикацию</h2>
+        <form id="publication-form">
+            <label for="author">Автор:</label>
+            <input type="text" id="author" name="author" required><br><br>
+            <label for="description">Описание:</label><br>
+            <textarea id="description" name="description" rows="4" cols="50" required></textarea><br><br>
+            <label for="section">Раздел:</label>
+            <select id="section" name="section" required>
+                <option value="Наука">Наука</option>
+                <option value="Искусство">Искусство</option>
+                <option value="Технологии">Технологии</option>
+                <option value="Путешествия">Путешествия</option>
+                <option value="Фотография">Фотография</option>
+            </select><br><br>
+            <button type="submit">Опубликовать</button>
         </form>
     </div>
+
     <footer>
         <div class="company-info">
             <p>«ООО СОЗНАНИЕ»</p>
@@ -53,5 +62,8 @@
             <a href="#">Партнеры</a>
         </div>
     </footer>
+
+    <script src="../public/add_publication.js"></script>
 </body>
+
 </html>
