--- a/site/feed.html
+++ b/site/feed.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Лента - LifeCourse</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../public/styles.css">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="../public/static/logo-new.png" alt="Логотип">
+            <img src="logo.jpg" alt="Логотип">
         </div>
         <div class="description">
             <p>Лента публикаций - LifeCourse</p>
@@ -56,7 +56,7 @@
         <div class="publication">
             <div class="publication-header">
                 <div class="user-info">
-                    <img src="../public/static/profile1.jpg" alt="Фото пользователя" class="publication-user-photo">
+                    <img src="profile1.jpg" alt="Фото пользователя" class="publication-user-photo">
                     <span class="publication-user">Иванова Анна</span>
                 </div>
                 <span class="publication-date">10 апреля 2024, 15:30</span>
@@ -71,7 +71,7 @@
         <div class="publication">
             <div class="publication-header">
                 <div class="user-info">
-                    <img src="../public/static/profile2.jpg" alt="Фото пользователя" class="publication-user-photo">
+                    <img src="profile2.jpg" alt="Фото пользователя" class="publication-user-photo">
                     <span class="publication-user">Петров Иван</span>
                 </div>
                 <span class="publication-date">11 апреля 2024, 10:45</span>
@@ -116,7 +116,7 @@
         <div class="publication">
             <div class="publication-header">
                 <div class="user-info">
-                    <img src="../public/static/profile5.jpg" alt="Фото пользователя" class="publication-user-photo">
+                    <img src="profile5.jpg" alt="Фото пользователя" class="publication-user-photo">
                     <span class="publication-user">Новиков Алексей</span>
                 </div>
                 <span class="publication-date">14 апреля 2024, 11:10</span>
@@ -145,19 +145,7 @@
         </div>
     </footer>
 
-    <script>
-        const publicationsContainer = document.getElementById('publications-container');
-        const publications = Array.from(publicationsContainer.children);
-        publications.sort((a, b) => {
-            const dateA = new Date(a.querySelector('.publication-date').textContent);
-            const dateB = new Date(b.querySelector('.publication-date').textContent);
-            return dateB - dateA;
-        });
-        publicationsContainer.innerHTML = '';
-        publications.forEach(publication => {
-            publicationsContainer.appendChild(publication);
-        });
-    </script>
+    <script src="../public/search.js"></script>
 </body>
 
 </html>
