--- a/site/main.html
+++ b/site/main.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LifeCourse - Главная страница</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../public/styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="../public/static/logo-new.png" alt="Логотип">
+            <img src="logo.jpg" alt="Логотип">
         </div>
         <div class="description">
             <p>LifeCourse - ваш надежный гид в мире образования!</p>
@@ -53,12 +53,13 @@
 
     <div class="login-button">
         <button onclick="location.href='login_registration.html'">Войти</button>
+        <img src="profile_icon.jpg" alt="Профиль" id="profileIcon" style="display: none;">
     </div>
 
     <div class="top-students">
         <h2>Топ студентов</h2>
         <div class="student">
-            <img src="../public/static/profile1.jpg" alt="Фото профиля">
+            <img src="profile1.jpg" alt="Фото профиля">
             <div class="student-info">
                 <p>Фамилия: Иванов</p>
                 <p>Имя: Иван</p>
@@ -84,5 +85,26 @@
             <a href="#">Партнеры</a>
         </div>
     </footer>
+
+    <script>
+        // Предположим, что у вас есть переменная isLoggedIn, которая будет true, если пользователь авторизован
+        var isLoggedIn = true; // Здесь вам нужно использовать ваш механизм авторизации
+    
+        // Функция для скрытия кнопки входа и показа значка профиля при авторизации
+        function toggleLoginButton() {
+            var loginButton = document.getElementById('loginButton');
+            var profileIcon = document.getElementById('profileIcon');
+            if (isLoggedIn) {
+                loginButton.style.display = 'none';
+                profileIcon.style.display = 'inline';
+            } else {
+                loginButton.style.display = 'inline';
+                profileIcon.style.display = 'none';
+            }
+        }
+    
+        // Вызовите эту функцию, когда страница загружается
+        window.onload = toggleLoginButton;
+    </script>
 </body>
 </html>
