--- a/site/rating.html
+++ b/site/rating.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Рейтинг - LifeCourse</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../public/styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="../public/static/logo-new.png" alt="Логотип">
+            <img src="logo.jpg" alt="Логотип">
         </div>
         <div class="description">
             <p>Рейтинг студентов - LifeCourse</p>
@@ -76,7 +76,7 @@
         <div class="student-ranking">
             <div class="student-info">
                 <span class="ranking-number">1.</span>
-                <img src="../public/static/profile1.jpg" alt="Фото профиля">
+                <img src="profile1.jpg" alt="Фото профиля">
                 <p class="student-name"><a href="#">Иванов Иван</a></p>
                 <p class="faculty"><a href="#">Физика</a></p>
                 <p class="group"><a href="#">Группа</a></p>
