--- a/site/add_publication.html
+++ b/site/add_publication.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Добавить публикацию</title>
-    <link rel="stylesheet" href="../public/styles.css">
+    <link rel="stylesheet" href="../public/css/styles.css">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="logo.jpg" alt="Логотип">
+            <img src="../public/static/logo-new.png" alt="Логотип">
         </div>
         <div class="description">
             <p>Добавление публикации - LifeCourse</p>
@@ -63,7 +63,7 @@
         </div>
     </footer>
 
-    <script src="../public/add_publication.js"></script>
+    <script src="../public/js/add_publication.js"></script>
 </body>
 
 </html>
