--- a/site/main.html
+++ b/site/main.html
@@ -52,9 +52,9 @@
 </div>
 
 <div class="login-button">
-    <button onclick="location.href='login_registration.html'">Войти</button>
-    <button onclick="location.href='registration.html'">Регистрация</button>
-    <button onclick="location.href='profile.html'" style="display: none;">Профиль</button>
+    <button onclick="location.href='/login'">Войти</button>
+    <button onclick="location.href='/registration'">Регистрация</button>
+    <button onclick="location.href='/profile'" style="display: none;">Профиль</button>
     <img src="profile_icon.jpg" alt="Профиль" id="profileIcon" style="display: none;">
 </div>
 
