--- a/site/user_profile.html
+++ b/site/user_profile.html
@@ -16,8 +16,8 @@
                 <li><a href="main.html">Главная страница</a></li>
                 <li><a href="feed.html">Лента</a></li>
                 <li><a href="rating.html">Рейтинг</a></li>
-                <li><a href="user_profile.html">Профиль студента</a></li>
-                <li><a href="profile_university.html">Профиль вуза</a></li>
+                <li><a href="student_search.html">Поиск студента</a></li>
+                <li><a href="university_search.html">Поиск вуза</a></li>
             </ul>
         </nav>
     </header>
@@ -30,10 +30,10 @@
             </div>
             <div class="profile-details">
                 <p><strong>Имя и фамилия:</strong> Иванов Иван</p>
-                <p><strong>Факультет:</strong> <a href="факультет_описание.html">Физика</a></p>
-                <p><strong>Кафедра:</strong> <a href="кафедра_описание.html">Кафедра физики</a></p>
+                <p><strong>Факультет:</strong> Физика</p>
+                <p><strong>Кафедра:</strong> Кафедра физики</p>
                 <p><strong>Поток:</strong> 2020</p>
-                <p><strong>Группа:</strong> <a href="список_группы.html">Группа 101</a></p>
+                <p><strong>Группа:</strong> <a href="show_students_group.html">Группа 101</a></p>
                 <p><strong>Место в рейтинге по потоку:</strong> 5</p>
                 <p><strong>Общее количество «звездочек»:</strong> 250</p>
                 <p><strong>Достижения в науке:</strong> <a href="достижения_науке.html">Посмотреть список (20)</a></p>
