--- a/site/main.html
+++ b/site/main.html
@@ -22,16 +22,16 @@
         <li><a href="main.html">Главная страница</a></li>
         <li><a href="feed.html">Лента</a></li>
         <li><a href="rating.html">Рейтинг</a></li>
-        <li><a href="user_profile.html">Профиль студента</a></li>
-        <li><a href="profile_university.html">Профиль вуза</a></li>
+        <li><a href="student_search.html">Поиск студента</a></li>
+        <li><a href="university_search.html">Поиск вуза</a></li>
     </ul>
 </nav>
 
 <div class="landing-description">
     <div class="landing-buttons">
-        <button onclick="location.href='login_registration.html'">Студентам</button>
-        <button onclick="location.href='login_registration.html'">ВУЗам</button>
-        <button onclick="location.href='login_registration.html'">Предпринимателям</button>
+        <button onclick="location.href='registration.html'">Студентам</button>
+        <button onclick="location.href='registration.html'">ВУЗам</button>
+        <button onclick="location.href='registration.html'">Предпринимателям</button>
     </div>
 
     <div class="app-description">
@@ -52,7 +52,7 @@
 </div>
 
 <div class="login-button">
-    <button onclick="location.href='login_registration.html'">Войти</button>
+    <button onclick="location.href='login.html'">Войти</button>
     <button onclick="location.href='registration.html'">Регистрация</button>
     <button onclick="location.href='profile.html'" style="display: none;">Профиль</button>
     <img src="profile_icon.jpg" alt="Профиль" id="profileIcon" style="display: none;">
