--- a/site/user_profile.html
+++ b/site/user_profile.html
@@ -26,7 +26,7 @@
         <h2>Профиль студента</h2>
         <div class="student-info">
             <div class="profile-picture">
-                <img src="student_profile_picture.jpg" alt="Фото профиля">
+                <img src="../public/static/student2.jpg" alt="Фото профиля">
             </div>
             <div class="profile-details">
                 <p><strong>Имя и фамилия:</strong> Иванов Иван</p>
