--- a/site/feed.html
+++ b/site/feed.html
@@ -23,8 +23,8 @@
             <li><a href="main.html">Главная страница</a></li>
             <li><a href="feed.html">Лента</a></li>
             <li><a href="rating.html">Рейтинг</a></li>
-            <li><a href="user_profile.html">Поиск студента</a></li>
-            <li><a href="profile_university.html">Поиск вуза</a></li>
+            <li><a href="student_search.html">Поиск студента</a></li>
+            <li><a href="university_search.html">Поиск вуза</a></li>
         </ul>
     </nav>
 
