--- a/site/login.html
+++ b/site/login.html
@@ -7,51 +7,47 @@
     <link rel="stylesheet" href="../public/css/styles.css">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="../public/static/logo-new.png" alt="Логотип">
-        </div>
-        <div class="description">
-            <p>Авторизация - LifeCourse</p>
-        </div>
-    </header>
-
-    <nav class="main-menu">
-        <ul>
-            <li><a href="main.html">Главная страница</a></li>
-            <li><a href="feed.html">Лента</a></li>
-            <li><a href="rating.html">Рейтинг</a></li>
-            <li><a href="student_search.html">Поиск студента</a></li>
-            <li><a href="university_search.html">Поиск вуза</a></li>
-        </ul>
-    </nav>
-
-    <div class="login-form">
-        <h2>Авторизация</h2>
-        <form action="#" method="post">
-            <label for="login">Логин:</label><br>
-            <input type="text" id="login" name="login" required><br><br>
-            
-            <label for="password">Пароль:</label><br>
-            <input type="password" id="password" name="password" required><br><br>
-            
-            <input type="submit" value="Войти">
-        </form>
+<header>
+    <div class="logo">
+        <img src="../public/static/logo-new.png" alt="Логотип">
     </div>
-    <footer>
-        <div class="company-info">
-            <p>«ООО СОЗНАНИЕ»</p>
-            <p>Юридический адрес</p>
-            <p>Электронная почта</p>
-        </div>
-        <div class="additional-links">
-            <a href="#">Политика конфиденциальности</a>
-            <a href="#">Условия использования сайта</a>
-            <a href="#">Обратная связь</a>
-            <a href="#">О нас</a>
-            <a href="#">Реклама</a>
-            <a href="#">Партнеры</a>
-        </div>
-    </footer>
+    <div class="description">
+        <p>Авторизация - LifeCourse</p>
+    </div>
+</header>
+
+<nav class="main-menu">
+    <ul>
+        <li><a href="main.html">Главная страница</a></li>
+        <li><a href="feed.html">Лента</a></li>
+        <li><a href="rating.html">Рейтинг</a></li>
+        <li><a href="student_search.html">Поиск студента</a></li>
+        <li><a href="university_search.html">Поиск вуза</a></li>
+    </ul>
+</nav>
+
+<div class="login-form">
+    <h2>Авторизация</h2>
+    <form action="#" method="post">
+        <input type="text" id="login" name="login" placeholder="Логин" required><br><br>
+        <input type="password" id="password" name="password" placeholder="Пароль" required><br><br>
+        <input type="submit" value="Войти">
+    </form>
+</div>
+<footer>
+    <div class="company-info">
+        <p>«ООО СОЗНАНИЕ»</p>
+        <p>Юридический адрес</p>
+        <p>Электронная почта</p>
+    </div>
+    <div class="additional-links">
+        <a href="#">Политика конфиденциальности</a>
+        <a href="#">Условия использования сайта</a>
+        <a href="#">Обратная связь</a>
+        <a href="#">О нас</a>
+        <a href="#">Реклама</a>
+        <a href="#">Партнеры</a>
+    </div>
+</footer>
 </body>
 </html>
