--- a/site/profile_university.html
+++ b/site/profile_university.html
@@ -3,54 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Профиль ВУЗа - LifeCourse</title>
+    <title>Лендинг ВУЗа</title>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="../public/css/styles.css">
+
 </head>
 <body>
-    <header class="university-header">
-        <div class="main-photo">
-            <img src="university_main_photo.jpg" alt="Основное фото ВУЗа">
-        </div>
+<header>
+    <div class="logo">
+        <img src="../public/static/logo-new.png" alt="Логотип">
+    </div>
+    <div class="description">
+        <p>LifeCourse - ваш надежный гид в мире образования!</p>
+        <p>Наше приложение значительно упрощает процесс обучения студентов, предоставляя широкий функционал для достижения успеха.</p>
+    </div>
+</header>
+
+<nav class="main-menu">
+    <ul>
+        <li><a href="main.html">Главная страница</a></li>
+        <li><a href="feed.html">Лента</a></li>
+        <li><a href="rating.html">Рейтинг</a></li>
+        <li><a href="student_search.html">Поиск студента</a></li>
+        <li><a href="university_search.html">Поиск вуза</a></li>
+    </ul>
+</nav>
+<main>
+    <div class="landing-info">
+        <h1 class="animated-heading">Добро пожаловать в ВУЗ!</h1>
+        <p>Информация о вашем ВУЗе, которую вы можете редактировать из личного кабинета.</p>
+    </div>
+
+    <div class="main-content">
+        <div class="main-photo-container">
+        <img src="../public/static/main-photo.jpg" alt="Основное фото" style="max-width: 100%; border-radius: 5px; box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);">
+    </div>
+        <h2>Фотогалерея</h2>
         <div class="gallery">
-            <img src="gallery_photo1.jpg" alt="Фото галереи">
-            <img src="gallery_photo2.jpg" alt="Фото галереи">
-            <img src="gallery_photo3.jpg" alt="Фото галереи">
+            <img src="../public/static/gallery/photo1.jpg" alt="Фото 1">
+            <img src="../public/static/gallery/photo2.jpg" alt="Фото 2">
+            <img src="../public/static/gallery/photo3.jpg" alt="Фото 3">
         </div>
-    </header>
 
-    <nav class="main-menu">
-        <ul>
-            <li><a href="main.html">Главная страница</a></li>
-            <li><a href="feed.html">Лента</a></li>
-            <li><a href="rating.html">Рейтинг</a></li>
-            <li><a href="student_search.html">Поиск студента</a></li>
-            <li><a href="university_search.html">Поиск вуза</a></li>
-        </ul>
-    </nav>
+        <div class="faculty-department-container">
+            <h2>Факультеты и кафедры</h2>
+            <p>Здесь будет информация о факультетах и кафедрах вашего ВУЗа.</p>
+        </div>
 
-    <div class="university-info">
-        <h2>Факультеты и кафедры</h2>
-        <p>Здесь будет информация о факультетах и кафедрах ВУЗа, редактируемая из личного кабинета.</p>
+        <a href="rating.html" class="students-button">Наши студенты</a>
     </div>
+</main>
 
-    <div class="university-students">
-        <button><a href="rating.html">Студенты ВУЗа</a></button>
+<footer>
+    <div class="company-info">
+        <p>«ООО СОЗНАНИЕ»</p>
+        <p>Юридический адрес</p>
+        <p>Электронная почта</p>
     </div>
+    <div class="additional-links">
+        <a href="#">Политика конфиденциальности</a>
+        <a href="#">Условия использования сайта</a>
+        <a href="#">Обратная связь</a>
+        <a href="#">О нас</a>
+        <a href="#">Реклама</a>
+        <a href="#">Партнеры</a>
+    </div>
+</footer>
+<script src="../public/js/animation.js"></script>
 
-    <footer>
-        <div class="company-info">
-            <p>«ООО СОЗНАНИЕ»</p>
-            <p>Юридический адрес</p>
-            <p>Электронная почта</p>
-        </div>
-        <div class="additional-links">
-            <a href="#">Политика конфиденциальности</a>
-            <a href="#">Условия использования сайта</a>
-            <a href="#">Обратная связь</a>
-            <a href="#">О нас</a>
-            <a href="#">Реклама</a>
-            <a href="#">Партнеры</a>
-        </div>
-    </footer>
 </body>
 </html>
