some style and add vertification_posts

--- a/site/main.html
+++ b/site/main.html
@@ -51,7 +51,8 @@
     </div>
 </div>
 
-<div class="login-button">
+
+    <div class="login-button">
     <button onclick="location.href='login.html'">Войти</button>
     <button onclick="location.href='registration.html'">Регистрация</button>
     <button onclick="location.href='profile.html'" style="display: none;">Профиль</button>
@@ -87,5 +88,6 @@
         <a href="#">Партнеры</a>
     </div>
 </footer>
+<script src="../public/js/show_letters.js"></script>
 </body>
 </html>
