redesign for top student on main page

--- a/site/main.html
+++ b/site/main.html
@@ -61,17 +61,20 @@
 
 <div class="top-students">
     <h2>Топ студентов</h2>
-    <div class="student">
-        <img src="profile1.jpg" alt="Фото профиля">
-        <div class="student-info">
-            <p>Фамилия: Иванов</p>
-            <p>Имя: Иван</p>
-            <p>Город: Москва</p>
-            <p>ВУЗ: МГУ</p>
-            <p>Факультет: Физика</p>
+    <div class="student-container">
+        <div class="student">
+            <img src="../public/images/student1.jpg" alt="Фото профиля">
+            <div class="student-info">
+                <p><strong>Фамилия:</strong> Иванов</p>
+                <p><strong>Имя:</strong> Иван</p>
+                <p><strong>Город:</strong> Москва</p>
+                <p><strong>ВУЗ:</strong> МГУ</p>
+                <p><strong>Факультет:</strong> Физика</p>
+            </div>
         </div>
     </div>
 </div>
+
 
 <footer>
     <div class="company-info">
